# cpp-xml-security

./: .gitignore  CMakeLists.txt  Makefile.am  NOTICE.txt  README.txt  configure.ac  xml-security-c.pc.in  xml-security-c.spec
Projects/VC15.0/xsec/: xsec.sln
Projects/VC15.0/xsec/c14n/: c14n.vcxproj
Projects/VC15.0/xsec/checksig/: checksig.vcxproj
Projects/VC15.0/xsec/cipher/: cipher.vcxproj
Projects/VC15.0/xsec/siginf/: siginf.vcxproj
Projects/VC15.0/xsec/templatesign/: templatesign.vcxproj
Projects/VC15.0/xsec/threadTest/: threadTest.vcxproj
Projects/VC15.0/xsec/txfmout/: txfmout.vcxproj
Projects/VC15.0/xsec/xsec_lib/: xsec_lib.vcxproj  xsec_lib.vcxproj.filters
Projects/VC15.0/xsec/xtest/: xtest.vcxproj
xsec/: Makefile.am
xsec/canon/: XSECC14n20010315.cpp  XSECC14n20010315.hpp
xsec/dsig/: DSIGReference.cpp  DSIGTransformBase64.cpp  DSIGTransformEnvelope.cpp  DSIGTransformXPath.cpp  DSIGTransformXPathFilter.cpp  DSIGTransformXSL.cpp
xsec/enc/: XSECCryptoProvider.hpp  XSECCryptoUtils.cpp  XSECCryptoUtils.hpp
xsec/enc/OpenSSL/: OpenSSLCryptoBase64.cpp  OpenSSLCryptoBase64.hpp  OpenSSLCryptoHash.cpp  OpenSSLCryptoHash.hpp  OpenSSLCryptoHashHMAC.cpp  OpenSSLCryptoHashHMAC.hpp  OpenSSLCryptoKeyDSA.cpp  OpenSSLCryptoKeyDSA.hpp  OpenSSLCryptoKeyRSA.cpp  OpenSSLCryptoKeyRSA.hpp  OpenSSLCryptoProvider.hpp  OpenSSLCryptoSymmetricKey.cpp  OpenSSLCryptoSymmetricKey.hpp  OpenSSLSupport.cpp  OpenSSLSupport.hpp
xsec/framework/: XSECConfig.hpp.cmake.in  XSECConfig.hpp.in  XSECDefs.hpp  XSECEnv.cpp  XSECEnv.hpp  XSECError.cpp  XSECException.hpp  XSECProvider.cpp  XSECProvider.hpp  XSECVersion.hpp  XSECW32Config.hpp  version.rc
xsec/samples/: simpleDecrypt.cpp  simpleEncrypt.cpp  simpleHMAC.cpp  simpleValidate.cpp
xsec/tools/checksig/: checksig.cpp
xsec/tools/cipher/: XencInteropResolver.cpp  cipher.cpp
xsec/tools/siginf/: siginf.cpp
xsec/tools/templatesign/: templatesign.cpp
xsec/tools/threadTest/: threadtest.cpp
xsec/tools/txfmout/: txfmout.cpp
xsec/tools/xtest/: xtest.cpp
xsec/utils/: XSECDOMUtils.cpp  XSECDOMUtils.hpp  XSECNameSpaceExpander.hpp  XSECPlatformUtils.cpp
